// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageRow Nastaliq rendering — dark theme renders the full language list including the Nastaliq row 1`] = `
<View
  testID="screen"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_800ExtraBold",
              "fontSize": 24,
            },
            {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Choose a language
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        Locked languages need All-Access — tap one to preview its journey.
      </Text>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#252530",
          },
        ]
      }
    >
      <View
        color="#F9FAFB"
        name="x"
        size={20}
      />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 20,
        "paddingTop": 8,
      }
    }
    data={
      [
        {
          "code": "hi",
          "fontFamily": "Noto Sans Devanagari",
          "name": "Hindi",
          "nativeName": "हिन्दी",
          "rtl": false,
          "script": "Devanagari",
        },
        {
          "code": "ur",
          "fontFamily": "Noto Nastaliq Urdu",
          "name": "Urdu",
          "nativeName": "اردو",
          "rtl": true,
          "script": "Nastaliq",
        },
        {
          "code": "ta",
          "fontFamily": "Noto Sans Tamil",
          "name": "Tamil",
          "nativeName": "தமிழ்",
          "rtl": false,
          "script": "Tamil",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Hindi"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#A78BFA14",
                  "borderColor": "#A78BFA",
                },
              ]
            }
          >
            <View
              color="#A78BFA"
              name="check-circle"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansDevanagari_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              हिन्दी
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Hindi
            </Text>
          </View>
          <View
            accessibilityLabel="Urdu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                {
                  "minHeight": 128,
                },
                {
                  "backgroundColor": "#1C1C28",
                  "borderColor": "#2D2D3D",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoNastaliqUrdu_700Bold",
                    "writingDirection": "rtl",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  {
                    "lineHeight": 52,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              اردو
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Urdu
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Tamil — locked, preview its journey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#1C1C28",
                  "borderColor": "#2D2D3D",
                },
              ]
            }
          >
            <View
              name="crown"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansTamil_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              தமிழ்
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Tamil
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`LanguageRow Nastaliq rendering — light theme renders the full language list including the Nastaliq row 1`] = `
<View
  testID="screen"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_800ExtraBold",
              "fontSize": 24,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Choose a language
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Locked languages need All-Access — tap one to preview its journey.
      </Text>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#F3F4F6",
          },
        ]
      }
    >
      <View
        color="#1A1A1A"
        name="x"
        size={20}
      />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 20,
        "paddingTop": 8,
      }
    }
    data={
      [
        {
          "code": "hi",
          "fontFamily": "Noto Sans Devanagari",
          "name": "Hindi",
          "nativeName": "हिन्दी",
          "rtl": false,
          "script": "Devanagari",
        },
        {
          "code": "ur",
          "fontFamily": "Noto Nastaliq Urdu",
          "name": "Urdu",
          "nativeName": "اردو",
          "rtl": true,
          "script": "Nastaliq",
        },
        {
          "code": "ta",
          "fontFamily": "Noto Sans Tamil",
          "name": "Tamil",
          "nativeName": "தமிழ்",
          "rtl": false,
          "script": "Tamil",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Hindi"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#6C3FC514",
                  "borderColor": "#6C3FC5",
                },
              ]
            }
          >
            <View
              color="#6C3FC5"
              name="check-circle"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansDevanagari_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              हिन्दी
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Hindi
            </Text>
          </View>
          <View
            accessibilityLabel="Urdu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                {
                  "minHeight": 128,
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#E5E7EB",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoNastaliqUrdu_700Bold",
                    "writingDirection": "rtl",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  {
                    "lineHeight": 52,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              اردو
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Urdu
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Tamil — locked, preview its journey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#E5E7EB",
                },
              ]
            }
          >
            <View
              name="crown"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansTamil_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              தமிழ்
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Tamil
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
